<resources>

    <string name="tarea_pesada">Tarea pesada (Con riesgo de
ANR)</string>
    <string name="hilos">Hilos</string>
    <string name="asynctask">AsyncTask</string>
    <string name="en_ocasiones">Android está diseñado para ofrecerle al
usuario la opción de terminar aquellas aplicaciones que demoran más de
5 segundos en responder a los eventos del usuario. Cuando esto pasa,
podemos ver el famoso Diálogo ANR (Application not respond).</string>
    <string name="es_fundamental" />Es fundamental para la capacidad de
    respuesta de la IU de la aplicación que no bloquee el subproceso de IU.
    Si tienes que realizar operaciones que no son inmediatas, debes
    asegurarte de hacerlo en subprocesos separados (subprocesos en segundo
    planoo de trabajo)
    <string name="la_interfaz_asynctask">La interfaz AsyncTask, fue
creada con el objetivo de liberar al programador del uso de hilos, la
sincronización entre ellos y la presentación de resultados en el hilo
primario. Esta clase unifica los aspectos relacionados que se
realizarán en segundo plano y además gestiona de forma asíncrona la
ejecución de las tareas.</string>
    <string name="checkbox">CHECK DE PRUEBA: De click para saber si el
proceso encargado de la interfase de la aplicación responde.</string>
    <string name="app_name">ControlProy</string>
    <string name="metodologia">Metodologia</string>
    <string name="Telefono">Telefono</string>
    <string name="Duracion">Duracion en semanas</string>
    <string name="nombre_proyecto">Nombre Proyecto</string>
    <string name="guardar">Guardar</string>
    <string name="todo">TODO</string>
    <string name="enviar">Enviar</string>
    <string name="saludo">Hola</string>
    <string name="es_editable">Es editable?</string>
    <string name="costos_asociados">Costos asociados</string>
    <string name="nombre_proyecto2">Nombre Proyecto</string>
    <string name="mapbox_access_token">pk.eyJ1IjoibmVja3JvbiIsImEiOiJjbDlleDVpeXgyZHU0M3ZsOXBqdm90ZmozIn0.1HEtW_5XensSKlvu-ARsow</string>

    <string-array name="Metodologia">
        <item>Metodologias</item>
        <item>Waterproof</item>
        <item>Scrum</item>
        <item>XP</item>
        <item>Lean</item>
        <item>Kanban</item>
    </string-array>

</resources>