<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/bg2"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="465dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="421dp"
                android:layout_height="131dp"
                app:srcCompat="@drawable/ctlproy" />

            <EditText
                android:id="@+id/nombreproyecto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:ems="10"
                android:hint="@string/nombre_proyecto2"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                tools:ignore="LabelFor,SpeakableTextPresentCheck" />
            <Button
                android:id="@+id/foto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="foto" />

            <TextView
                android:id="@+id/tipometodo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/metodologia"
                android:textColor="#FFFFFF" />

            <Spinner
                android:id="@+id/spinner_metodologia"
                android:layout_width="363dp"
                android:textColor="@android:color/black"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:background="@color/white"
                android:contentDescription="@string/app_name"
                android:dropDownSelector="@drawable/bg2"
                android:minHeight="48dp"
                android:spinnerMode="dropdown"
                tools:ignore="MissingConstraints" />

            <RatingBar
                android:id="@+id/ratingBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:numStars="5" />

            <EditText
                android:id="@+id/editTextPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/Telefono"
                android:inputType="phone"
                android:minHeight="48dp" />

            <EditText
                android:id="@+id/editTextNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:textColor="@color/black"
                android:ems="10"
                android:hint="@string/Duracion"
                android:inputType="number"
                android:minHeight="48dp" />


        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/btnEnviar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/guardar"
        android:textColorLink="#FFFFFF"
        android:theme="@style/Button.butt" />


</LinearLayout>