<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/D"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">

    <LinearLayout
        android:layout_width="379dp"
        android:layout_height="662dp"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="24dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.549">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="347dp"
            android:layout_height="63dp"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ctlproy" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nombre_proyecto"
            android:textColor="#FFFFFF" />

        <EditText
            android:id="@+id/nombreproyecto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:autofillHints=""
            android:ems="10"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="LabelFor,SpeakableTextPresentCheck" />

        <TextView
            android:id="@+id/tipometodo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/metodologia"
            android:textColor="#FFFFFF" />

        <Spinner
            android:id="@+id/spinner_metodologia"
            android:layout_width="363dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:contentDescription="@string/app_name"
            android:minHeight="48dp"
            android:spinnerMode="dropdown"
            tools:ignore="MissingConstraints" />

        <EditText
            android:id="@+id/editTextNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/Duracion"
            android:inputType="number"
            android:minHeight="48dp"
            android:textColorHint="#80D8FF"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/editTextPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/Telefono"
            android:inputType="phone"
            android:minHeight="48dp" />

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/guardar" />

        <Button
            android:id="@+id/button3"
            android:layout_width="64dp"
            android:layout_height="68dp"
            android:text="+"
            android:onClick="onClick" />


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>